# lemon

./: Example.ipynb  LICENSE  README.md  pyproject.toml
src/lemon/: __init__.py  _lemon.py  _lemon_utils.py  _matching_attribution_explanation.py
src/lemon/utils/: __init__.py
src/lemon/utils/datasets/: __init__.py  _dataset.py  _utils.py  deepmatcher.py
src/lemon/utils/matchers/: __init__.py  _magellan.py  _transformer_matcher.py
