[tool.poetry]
name = "lemon-explain"
version = "0.1.0"
description = "LEMON: Explainable Entity Matching"
license = "MIT"
authors = ["Nils Barlaug <nils.barlaug@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/NilsBarlaug/lemon"
repository = "https://github.com/NilsBarlaug/lemon"
documentation = "https://github.com/NilsBarlaug/lemon"
packages = [
    { include = "lemon", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1"
scikit-learn = "^1.0"
transformers = {version = "^4.10.3", optional = true}
torch = {version = "^1.9.1", optional = true}
py-entitymatching = {version = "^0.4.0", optional = true}
pyarrow = {version = "^5.0.0", optional = true}

[tool.poetry.extras]
matchers = ["transformers", "torch", "py_entitymatching"]
storage = ["pyarrow"]
all = ["transformers", "torch", "py_entitymatching", "pyarrow"]

[tool.poetry.dev-dependencies]
black = "^21.9b0"
isort = "^5.9.3"
jupyterlab = "^3.1.14"

[tool.black]
line-length = 120
target_version = ['py38']
include = '\.py$'

[tool.isort]
line_length=120
multi_line_output=3
include_trailing_comma=true
skip_glob = '^((?!py$).)*$'
known_third_party = []

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
